style fixes and CORS / noAuthHttpClient changes

--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,7 +1,7 @@
 <nav id="topbar" class="navbar navbar-expand-lg navbar-light formkiq-light-blue-background mx-0 px-0 my-0 py-0">
   <div class="col-3 navbar-brand-box-container navbar-dark">
     <div id="brand-box" class="row formkiq-dark-blue-background">
-      <div class="col-8 pr-2">
+      <div class="col-8 px-3">
         <a class="navbar-brand formkiq-font" (click)="runNav">Form<span class="formkiq-light-blue">Kiq</span> <span class="formkiq-font-highlight"> Cloud</span></a>
       </div>
       <div class="navbar-hamburger-container col-3 offset-1">
@@ -13,7 +13,7 @@
       </div>
     </div>
   </div>
-  <div class="col-6 navbar-current-page-title pt-2 pl-3">
+  <div class="navbar-current-page-title ml-2 pl-6 pt-2">
     <h5 class="formkiq-font">{{ routeTitle }}</h5>
   </div>
   <div class="col-4 offset-8 authentication-container">
