--- a/src/styles.scss
+++ b/src/styles.scss
@@ -68,7 +68,7 @@ label {
 
 .navbar-current-page-title {
   position: absolute;
-  margin-left: 190px;
+  left: 190px;
 }
 
 .navbar-current-page-title h5 {
