--- a/src/app/plugins/document-explorer/components/searchbar/searchbar.component.html
+++ b/src/app/plugins/document-explorer/components/searchbar/searchbar.component.html
@@ -1,24 +1,6 @@
 
-<nav class="navbar navbar-expand-md pt-5 pr-5">
-  <div class="collapse navbar-collapse" id="navbarCollapse">
-    <div class="navbar-nav">
-      <!--
-      <div class="input-group mr-sm-1">
-        <button class="btn btn-secondary">
-        <span class="spinner-border spinner-border-sm"></span>
-        Untagged
-        </button>
-      </div>
-      <div class="input-group">
-        <div class="input-group-prepend">
-          <span class="input-group-text">
-            <span class="fa fa-calendar-o"></span>
-          </span>
-        </div>
-        <input type="text" class="form-control pickadate-select-year picker__input" placeholder="Select Year" readonly="" id="P672874704" aria-haspopup="true" aria-expanded="false" aria-readonly="false" aria-owns="P672874704_root">
-      </div>
-    -->
-    </div>
+<div class="row">
+  <div class="col-12">
     <form [formGroup]="tagsearchForm" class="form-inline ml-auto" (ngSubmit)="search()">
       <div class="input-group mr-sm-2">
         <div class="input-group-prepend">
@@ -36,7 +18,7 @@
       <button type="submit" class="btn btn-secondary">Search</button>
     </form>
   </div>
-</nav>
+</div>
 
 <div class="container">
   <br /><br />
@@ -64,7 +46,7 @@
 </div>
 
 <ng-template #divForSubmitQuerySpinner>
-  <div class="wrapper divForSpinner" *ngIf="submitted && !submittedCompleted">
+  <div class="wrapper divForSpinner" *ngIf="submitted && !submittedCompleted && !this.tagsearchForm.invalid">
     <div class="overlay">
       <div class="spinner-wrapper">
         <app-spinner></app-spinner>
