--- a/src/app/plugins/document-explorer/components/searchbar/searchbar.component.html
+++ b/src/app/plugins/document-explorer/components/searchbar/searchbar.component.html
@@ -8,9 +8,9 @@
       Document Search
     </h5>
   </div>
-  <form [formGroup]="tagsearchForm" (ngSubmit)="search()">
-    <div class="row">
-      <div class="col-12 px-4 mb-2">
+  <div class="row">
+    <div class="col-12 px-4 mb-2">
+      <form [formGroup]="dateSearchForm">
         <div class="row mb-4">
           <div class="col-12 col-md-3">
             <label for="dp" class="pt-1">
@@ -25,7 +25,7 @@
                 class="form-control"
                 placeholder="yyyy-mm-dd"
                 name="dp"
-                ngbDatepicker #d="ngbDatepicker">
+                ngbDatepicker #d="ngbDatepicker" (dateSelect)="onDateSelected($event)">
               <div class="input-group-append">
                 <button class="btn btn-outline-secondary" (click)="d.toggle()" type="button"><i class="fa fa-calendar"></i></button>
               </div>
@@ -35,15 +35,17 @@
             <input type="button" class="btn btn-primary" value="Today" (click)="viewTodaysDocuments()" />
           </div>
         </div>
-        <div class="row">
-          <div class="col-12">
-            <label class="pt-1">
-              <h6>
-              By Tag:
-              </h6>
-            </label>
-          </div>
+      </form>
+      <div class="row">
+        <div class="col-12">
+          <label class="pt-1">
+            <h6>
+            By Tag:
+            </h6>
+          </label>
         </div>
+      </div>
+      <form [formGroup]="tagSearchForm" (ngSubmit)="runTagSearch()">
         <div class="row mb-2">
           <div class="col-12 col-md-3 col-lg-2">
             <label>Tag Search:</label>
@@ -71,11 +73,10 @@
             <input type="button" class="btn btn-primary" value="View All Untagged Documents" (click)="viewAllUntaggedDocuments()" />
           </div>
         </div>
-      </div>
+      </form>
     </div>
-  </form>
+  </div>
 </div>
-
 <div class="container">
   <br /><br />
   <div class="table">
@@ -102,7 +103,7 @@
 </div>
 
 <ng-template #divForSubmitQuerySpinner>
-  <div class="wrapper divForSpinner" *ngIf="submitted && !submittedCompleted && !this.tagsearchForm.invalid">
+  <div class="wrapper divForSpinner" *ngIf="submitted && !submittedCompleted && !this.tagSearchForm.invalid">
     <div class="overlay">
       <div class="spinner-wrapper">
         <app-spinner></app-spinner>
