--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -1,5 +1,5 @@
 <nav id="sidebar" *ngIf="isSidebarToggled" class="navbar pl-3 pr-0 formkiq-font navbar-dark formkiq-dark-blue-background">
-  <ul *ngIf="authenticationService.requireAuthenticationForRead && authenticationService.loggedInUser != null" class="navbar-nav mr-auto">
+  <ul *ngIf="!authenticationService.requireAuthenticationForRead || authenticationService.loggedInUser != null" class="navbar-nav mr-auto">
     <li class="nav-item" [ngClass]="{ 'active': currentUrl == '/' }">
       <a class="nav-link"
         [routerLink]="['/']"
