--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -182,7 +182,7 @@
         </a>
       </li>
     </div>
-    <li class="nav-item" [ngClass]="{ 'active': currentUrl == '/signOut' }">
+    <li *ngIf="authenticationService.loggedInUser != null" class="nav-item" [ngClass]="{ 'active': currentUrl == '/signOut' }">
       <a class="nav-link"
         [routerLink]="['/signOut']"
         (click)="signOut();emitSidebarItemClick()">
