--- a/src/app/plugins/document-explorer/components/searchbar/searchbar.component.html
+++ b/src/app/plugins/document-explorer/components/searchbar/searchbar.component.html
@@ -77,15 +77,14 @@
     </div>
   </div>
 </div>
-<div class="container">
-  <br /><br />
+<div class="container mt-2">
   <div class="table">
     <table class="table table-hover">
       <thead>
         <tr>
           <th scope="col">Document</th>
           <th scope="col">Path</th>
-          <th scope="col">Inserted Date</th>
+          <th scope="col">Date Inserted</th>
           <th scope="col">&nbsp;</th>
         </tr>
       </thead>
@@ -95,7 +94,7 @@
           <td>{{result.documentId}}</td>
           <td>{{result.path}}&nbsp;</td>
           <td>{{result.inserteddate}}&nbsp;</td>
-          <td>&nbsp;</td>
+          <td><input type="button" value="Tags..." (click)="viewDocumentTags(result.documentId)" /></td>
         </tr>
       </tbody>
     </table>
