--- a/src/app/plugins/document-explorer/pages/explore/explore.component.html
+++ b/src/app/plugins/document-explorer/pages/explore/explore.component.html
@@ -5,7 +5,7 @@
 </div>
 <div class="row">
   <div class="col-12 my-1">
-    <input type="button" value="Add Documents" (click)="addDocuments()" />
+    <input type="button" class="btn btn-primary" value="Add Documents..." (click)="addDocuments()" />
   </div>
 </div>
 
