moved results to explorer component from searchbar adjusted spinner added userId and contentType to results

--- a/src/app/plugins/document-explorer/components/searchbar/searchbar.component.html
+++ b/src/app/plugins/document-explorer/components/searchbar/searchbar.component.html
@@ -58,51 +58,15 @@
             <input type="text" class="form-control" formControlName="tagValue" placeholder="tag value">
           </div>
           <div class="offset-0 offset-md-2 offset-lg-0 col-6 col-md-12 col-lg-2">
-            <input type="button" class="btn btn-primary mr-2" value="Run Tag Search" (click)="runTagSearch()" />
+            <input type="button" class="btn btn-primary mr-2" value="Run Tag Search" [disabled]="tagSearchForm.status !== 'VALID'" (click)="runTagSearch()" />
           </div>
         </div>
         <div class="row">
           <div class="col-12 text-center pt-2">
             <input type="button" class="btn btn-primary" value="View All Untagged Documents" (click)="viewAllUntaggedDocuments()" />
-
           </div>
         </div>
       </form>
     </div>
   </div>
 </div>
-<div class="mt-2">
-  <div class="table">
-    <table class="table table-hover">
-      <thead>
-        <tr>
-          <th scope="col">Document</th>
-          <th scope="col">Path</th>
-          <th scope="col">Date Inserted</th>
-          <th scope="col">&nbsp;</th>
-        </tr>
-      </thead>
-      <tbody *ngIf="results$ | async as results else divForSubmitQuerySpinner">
-        <tr *ngIf="results.documents.length == 0"><td>No Documents Found</td></tr>
-        <tr *ngFor="let result of results.documents">
-          <td>{{result.documentId}}</td>
-          <td>{{result.path}}&nbsp;</td>
-          <td>{{result.inserteddate}}&nbsp;</td>
-          <td><input type="button" value="Tags..." (click)="viewDocumentTags(result.documentId)" /></td>
-        </tr>
-      </tbody>
-    </table>
-  </div>
-</div>
-
-<ng-template #divForSubmitQuerySpinner>
-  <div class="wrapper divForSpinner" *ngIf="submitted && !submittedCompleted && !this.tagSearchForm.invalid">
-    <div class="overlay">
-      <div class="spinner-wrapper">
-        <app-spinner></app-spinner>
-      </div>
-    </div>
-
-    <ng-content></ng-content>
-  </div>
-</ng-template>
