--- a/src/app/plugins/document-explorer/components/searchbar/searchbar.component.html
+++ b/src/app/plugins/document-explorer/components/searchbar/searchbar.component.html
@@ -25,7 +25,7 @@
                 class="form-control"
                 placeholder="yyyy-mm-dd"
                 name="dp"
-                ngbDatepicker #d="ngbDatepicker" (dateSelect)="onDateSelected($event)">
+                ngbDatepicker #d="ngbDatepicker" [readonly]="true" (dateSelect)="onDateSelected($event)">
               <div class="input-group-append">
                 <button class="btn btn-outline-secondary" (click)="d.toggle()" type="button"><i class="fa fa-calendar"></i></button>
               </div>
