added pagination fixed tag button link updated postSearch to include query string values (paging, limit)

--- a/src/app/plugins/api-explorer/components/api-item/api-item.component.html
+++ b/src/app/plugins/api-explorer/components/api-item/api-item.component.html
@@ -114,7 +114,7 @@
               <div *ngIf="apiItem.hasPagingTokens" class="row">
                 <div class="col-12">
                   <div class="form-group">
-                    <label for="field-previous">prev (paging token)</label>
+                    <label for="field-previous">previous (paging token)</label>
                     <input
                       type="text"
                       class="form-control"
