--- a/src/styles.scss
+++ b/src/styles.scss
@@ -331,6 +331,10 @@ label {
   background-color: $danger-background-color !important;
 }
 
+.faded {
+  opacity: 0.5;
+}
+
 
 /* CSS - Cascading Style Sheet */
 /* Palette color codes */
