--- a/src/app/plugins/api-explorer/components/api-item/api-item.component.html
+++ b/src/app/plugins/api-explorer/components/api-item/api-item.component.html
@@ -169,7 +169,7 @@
             </button>
           </div>
         </div>
-        <ngb-tabset (tabChange)="onTabChange()">
+        <ngb-tabset>
           <ngb-tab title="HTTP">
             <ng-template ngbTabContent>
               <textarea id="http-textarea" class="form-control" readonly>{{ getHttpRequest() }}</textarea>
