fixed prod build errors

--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -5,7 +5,7 @@
   <div class="col-3 navbar-brand-box-container navbar-dark">
     <div id="brand-box" class="row formkiq-dark-blue-background">
       <div class="col-8 px-3">
-        <a class="navbar-brand formkiq-font" (click)="runNav">Form<span class="formkiq-light-blue">Kiq</span> <span class="formkiq-font-highlight"> Cloud</span></a>
+        <a class="navbar-brand formkiq-font">Form<span class="formkiq-light-blue">Kiq</span> <span class="formkiq-font-highlight"> Cloud</span></a>
       </div>
       <div class="navbar-hamburger-container col-3 offset-1">
         <button *ngIf="showHamburgerButton" (click)="toggleSidebar()" [ngClass]="{'is-active': isSidebarToggled}" class="hamburger hamburger--stand" type="button">
