--- a/src/app/plugins/document-explorer/pages/tags/tags.component.html
+++ b/src/app/plugins/document-explorer/pages/tags/tags.component.html
@@ -9,7 +9,7 @@
 </div>
 <div class="col-12">
   <div class="table">
-    <table class="table table-hover" *ngIf="results$ | async as results else tagsLoading">
+    <table class="table table-hover" *ngIf="results$ | async as results">
       <thead>
         <tr>
           <th scope="col">Key</th>
