--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,5 +1,25 @@
 <div class="mt-4">
   <h4>Documents Added</h4>
+  <h5 *ngIf="chartHasDate() && !rangePickerVisible">
+    <a [routerLink]="" (click)="showRangePicker()">
+    {{ getFormattedDate(since) }}
+    -
+    {{ getFormattedDate(until) }}
+    ({{ getDateTimezone(since) }})
+    </a>
+  </h5>
+  <div *ngIf="rangePickerVisible">
+    <form [formGroup]="rangeForm" (ngSubmit)="runRange()">
+      <div class="row mb-2">
+        <div class="col-12 col-md-10">
+          <input type="text" class="form-control" formControlName="range" value="{{ getRangeFormattedDate(since) }} - {{ getRangeFormattedDate(until) }}" [ngClass]="{ 'is-invalid': !f.range.pristine && f.range.errors }" />
+        </div>
+        <div class="col-12 col-md-2 text-center">
+          <input type="button" class="btn btn-primary stretch-width" value="Go" (click)="runRange()" />
+        </div>
+      </div>
+    </form>
+  </div>
 </div>
 <div class="row">
   <canvas baseChart
