--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -21,12 +21,14 @@
     </form>
   </div>
 </div>
-<div class="row">
-  <canvas baseChart
-    [datasets]="chartData"
-    [labels]="chartLabels"
-    [options]="chartOptions"
-    [legend]="chartLegend"
-    [chartType]="chartType">
-  </canvas>
+<div class="row stretch-width">
+  <div class="col-12 chart-container">
+    <canvas baseChart
+      [datasets]="chartData"
+      [labels]="chartLabels"
+      [options]="chartOptions"
+      [legend]="chartLegend"
+      [chartType]="chartType">
+    </canvas>
+  </div>
 </div>
