--- a/src/styles.scss
+++ b/src/styles.scss
@@ -200,6 +200,10 @@ span.version {
   color: $ship-cove-blue;
 }
 
+.chart-container canvas {
+  max-height: 80vh;
+}
+
 .tag {
   display: inline-block;
   margin-left: 0.25rem;
