added reset password flow

--- a/src/app/plugins/authentication/components/change-password/change-password.component.html
+++ b/src/app/plugins/authentication/components/change-password/change-password.component.html
@@ -3,8 +3,11 @@
     <h5>Change Password</h5>
   </div>
 </div>
-<form [formGroup]="form" class="px-2 py-2">
-  <div class="form-group">
+<button [hidden]="!showVerificationCodeResendButton" class="btn btn-primary mt-2 mb-5" (click)="requestPasswordResetVerificationCodeResend()">
+  Send New Reset Code
+</button>
+<form [hidden]="showVerificationCodeResendButton" [formGroup]="form" class="px-2 py-2">
+  <div [hidden]="verificationCode" class="form-group">
     <label for="field-old-password">Current Password</label>
     <input
       type="password"
