--- a/src/app/plugins/authentication/pages/authenticate/authenticate.component.html
+++ b/src/app/plugins/authentication/pages/authenticate/authenticate.component.html
@@ -4,7 +4,7 @@
       <div class="row">
         <div class="col-12">
           <app-login *ngIf="currentAuthenticationForm == 'login'"></app-login>
-          <app-register *ngIf="currentAuthenticationForm == 'register'" (cancelDropdownEmitter)="revertToLogin()"></app-register>
+          <app-register *ngIf="allowUserSelfRegistration && currentAuthenticationForm == 'register'" (cancelDropdownEmitter)="revertToLogin()"></app-register>
           <app-forgot-password *ngIf="currentAuthenticationForm == 'forgotPassword'" (cancelDropdownEmitter)="revertToLogin()"></app-forgot-password>
           <app-change-password [email]="email" [verificationCode]="verificationCode" *ngIf="currentAuthenticationForm == 'changePassword'" (cancelDropdownEmitter)="revertToLogin()"></app-change-password>
         </div>
@@ -12,7 +12,7 @@
       <div class="row formkiq-light-blue-border top-border">
         <div class="col-12 px-2 py-2">
           <button class="btn btn-sm btn-secondary mr-1" *ngIf="currentAuthenticationForm != 'login'" (click)="toggleAuthenticationForm('login')">&larr; Sign In</button>
-          <button class="btn btn-sm btn-secondary mr-1" *ngIf="currentAuthenticationForm != 'register'" (click)="toggleAuthenticationForm('register')">Create Account</button>
+          <button class="btn btn-sm btn-secondary mr-1" *ngIf="allowUserSelfRegistration && currentAuthenticationForm != 'register'" (click)="toggleAuthenticationForm('register')">Create Account</button>
           <button class="btn btn-sm btn-secondary mr-1" *ngIf="currentAuthenticationForm != 'forgotPassword'" (click)="toggleAuthenticationForm('forgotPassword')">Forgot Password?</button>
         </div>
       </div>
