--- a/src/app/plugins/document-explorer/pages/explore/explore.component.html
+++ b/src/app/plugins/document-explorer/pages/explore/explore.component.html
@@ -1,6 +1,6 @@
 <div class="row">
   <div class="col-12 mb-1">
-    <app-searchbar #searchbar (documentQueryResultEmitter)="displayResults($event)"></app-searchbar>
+    <app-searchbar #searchbar [currentTimezone]="currentTimezone" (documentQueryResultEmitter)="displayResults($event)"></app-searchbar>
   </div>
   <div class="col-12 mb-1">
     <input type="button" class="btn btn-primary" value="Add Documents..." (click)="addDocuments()" />
