--- a/src/app/plugins/document-explorer/components/searchbar/searchbar.component.html
+++ b/src/app/plugins/document-explorer/components/searchbar/searchbar.component.html
@@ -2,7 +2,7 @@
 <div class="row">
   <div class="col-12 my-2">
     <h5 class="formkiq-font collapse-link">
-      <fa name="chevron-down"></fa>
+      <i name="chevron-down"></i>
       Document Search
     </h5>
   </div>
